# cpp

./: CMakeLists.txt  README.md
ActiveObject/: CMakeLists.txt
ActiveObject/include/: ActiveObject.hpp
ActiveObject/src/: ActiveObject.cpp  EventQueue.cpp  main.cpp
ActiveObject/src/include/: EventQueue.hpp
adel/: CMakeLists.txt
adel/include/: ActiveObject.hpp
adel/src/core/: ActiveObject.cpp  EventQueue.cpp
adel/src/include/core/: EventQueue.hpp
design-patterns/: CMakeLists.txt
design-patterns/observer-mediator/: CMakeLists.txt
design-patterns/observer-mediator/diagrams/: observer-mediator.drawio
design-patterns/observer-mediator/src/: main.cpp
design-patterns/observer-mediator/src/app/: App.cpp
design-patterns/observer-mediator/src/core/: App.cpp  Display.cpp  Mobile.cpp  WeatherStation.cpp
design-patterns/observer-mediator/src/include/app/: App.hpp
design-patterns/observer-mediator/src/include/core/: App.hpp  Display.hpp  Mobile.hpp  WeatherStation.hpp
design-patterns/observer-mediator/src/include/utils/: Logger.hpp
design-patterns/observer-mediator/src/utils/: Logger.cpp
design-patterns/pimpl/: CMakeLists.txt
design-patterns/pimpl/include/: SecureComm.hpp
design-patterns/pimpl/src/: Encryptor.cpp  SecureComm.cpp  main.cpp
design-patterns/pimpl/src/include/: Encryptor.hpp
